--- a/apps/smart-contracts/package.json
+++ b/apps/smart-contracts/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "solhint": "^3.3.7"
+  },
+  "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.10",
+    "truffle-hdwallet-provider": "^1.0.17"
   }
 }
